[es-MX] update from Pootle (firefox)

--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -41,6 +41,8 @@ slider         =       deslizador
 spinbutton     =       botón de incremento/decremento
 diagram        =       diagrama
 animation      =       animación
+buttonmenu     =       menú de botones
+canvas         =       canvas
 passwordtext   =       texto de contraseña
 radiomenuitem  =       elemento de menú de radio
 textcontainer  =       contenedor de texto
@@ -52,12 +54,13 @@ paragraph      =       párrafo
 entry          =       entrada
 caption        =       leyenda
 heading        =       encabezado
+comboboxlist   =       lista desplegable
 comboboxoption =       opción de caja desplegable
 imagemap       =       mapa de imágenes
 listboxoption  =       opción
 listbox        =       caja de lista
 flatequation   =       ecuación plana
-gridcell       =       rejilla
+gridcell       =       cuadrícula
 note           =       nota
 figure         =       figura
 definitionlist =       lista de definiciones
@@ -205,19 +208,20 @@ spinbuttonAbbr     =       botón de incremento/decremento
 diagramAbbr        =       diagrama
 animationAbbr      =       animación
 equationAbbr       =       ecuación
-buttonmenuAbbr     =       menú de botón
+buttonmenuAbbr     =       menú de botones
 whitespaceAbbr     =       espacio en blanco
 canvasAbbr         =       canvas
 checkmenuitemAbbr  =       elemento del menú seleccionable
 labelAbbr          =       etiqueta
 passwordtextAbbr   =       passwdtxt
-radiomenuitemAbbr  =       elemento de menú de radio
+radiomenuitemAbbr  =       elemento de menú radio
 textcontainerAbbr  =       contenedor de texto
 togglebuttonAbbr   =       botón de alternancia
 treetableAbbr      =       tabla de árbol
 headerAbbr         =       encabezado
 footerAbbr         =       pie de página
 paragraphAbbr      =       párrafo
+comboboxlistAbbr   =       lista desplegable
 imagemapAbbr       =       imgmap
 flatequationAbbr   =       ecuación plana
 gridcellAbbr       =       cuadrícula
