--- a/es-MX/webapprt/webapprt/webapp.properties
+++ b/es-MX/webapprt/webapprt/webapp.properties
@@ -42,8 +42,12 @@ webapps.install.install=Instalar App
 webapps.install.dontinstall=No instalar
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
+webapps.uninstall.title=Desinstalar %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=¿Quieres desinstalar %S?
+webapps.uninstall.uninstall=Desinstalar aplicación
+webapps.uninstall.dontuninstall=No desinstalar
 
 paymentDialog.title=Pago
 paymentDialog.message=¿Cuál proveedor de pago quieres usar?
