[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -99,6 +99,8 @@ popupShowPopupPrefix=Prikaži '%S'
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
+badContentBlocked.blocked.message=%S blokira sadržaj na ovoj stranici.
+badContentBlocked.notblocked.message=%S ne blokira nikakav sadržaj na ovoj stranici.
 
 # missing plugin installer
 installPlugin.message = Želite li instalirati priključak potreban za prikaz sadržaja na ovoj stranici?
@@ -446,7 +448,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Želite li s ove stranice (%2$S) instalirati "%1$S"?
 webapps.install.success = Aplikacija je instalirana
 webapps.install.inprogress = Instalacija u tijeku
+webapps.uninstall = Ukloni
+webapps.uninstall.accesskey = U
+webapps.doNotUninstall = Nemoj ukloniti
+webapps.doNotUninstall.accesskey = N
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Želite li ukloniti "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S se prikazuje preko cijelog zaslona.
@@ -507,7 +514,16 @@ getUserMedia.shareMicrophone.message = Želite li podijeliti svoj mikrofon sa %S
 getUserMedia.shareScreen.message = Želite li podijeliti svoj ekran sa %S?
 getUserMedia.shareCameraAndMicrophone.message = Želite li podijeliti svoju kameru i mikrofon sa %S?
 getUserMedia.shareScreenAndMicrophone.message = Želite li podijeliti svoj mikrofon i ekran sa %S?
+getUserMedia.selectWindow.label=Prozor za dijeliti:
+getUserMedia.selectWindow.accesskey=d
+getUserMedia.selectScreen.label=Zaslon za dijeliti:
+getUserMedia.selectScreen.accesskey=Z
+getUserMedia.selectApplication.label=Aplikacija za dijeliti:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Bez videa
+getUserMedia.noApplication.label = Nema aplikacije
+getUserMedia.noScreen.label = Nema zaslona
+getUserMedia.noWindow.label = Nema prozora
 getUserMedia.noAudio.label = Bez zvuka
 getUserMedia.shareEntireScreen.label = Cijeli ekran
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -515,6 +531,7 @@ getUserMedia.shareEntireScreen.label = Cijeli ekran
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 prozor);#1 (#2 prozora);#1 (#2 prozora)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -522,6 +539,7 @@ getUserMedia.shareEntireScreen.label = Cijeli ekran
 getUserMedia.shareSelectedDevices.label = Dijeli odabrani uređaj;Dijeli odabrane uređaje
 getUserMedia.shareSelectedDevices.accesskey = D
 getUserMedia.shareScreen.label = Podijeli ekran
+getUserMedia.shareApplication.label = Dijeli odabranu aplikaciju
 getUserMedia.shareWindow.label = Podijeli odabrani prozor
 getUserMedia.shareSelectedItems.label = Podijeli odabrane stavke
 getUserMedia.always.label = Uvijek dijeli
