--- a/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,4 +97,8 @@ quit-button.tooltiptext.linux2 = Zatvori %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Zatvori %1$S (%2$S)
 
+panic-button.label = Zaboravi
+panic-button.tooltiptext = Zaboravi neke dijelove povijesti pretraživanja
 
+loop-call-button.label = Pozovite nekoga na razgovor
+loop-call-button.tooltiptext = Pozovite nekoga na razgovor
