--- a/hr/browser/chrome/browser/devtools/storage.properties
+++ b/hr/browser/chrome/browser/devtools/storage.properties
@@ -11,37 +11,48 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=e
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=Spremište
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=Ispitivač spremišta
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
+storage.panelLabel=Ploča spremišta
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
+storage.tooltip2=Ispitivač spremišta (kolačići, lokalno spremište…)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
 # there are no websites on the current page (about:blank)
+tree.emptyText=Nema poslužitelja na stranici
 
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=Nema prisutnih podataka na odabranom poslužitelju
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookies
+tree.labels.localStorage=Lokalno spremište
+tree.labels.sessionStorage=Spremište sesija
+tree.labels.indexedDB=Indexed DB
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -49,6 +60,9 @@ tree.labels.cookies=Cookies
 table.headers.cookies.name=Naziv
 table.headers.cookies.path=Putanja
 table.headers.cookies.host=Domena
+table.headers.cookies.expires=Istječe
+table.headers.cookies.value=Vrijednost
+table.headers.cookies.lastAccessed=Posljednje pristupanje
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -62,13 +76,17 @@ table.headers.cookies.host=Domena
 
 
 table.headers.indexedDB.version=Inačica
+table.headers.indexedDB.autoIncrement=Automatsko povećanje
+table.headers.indexedDB.indexes=Indeksi
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
 # Cookie
+label.expires.session=Sesija
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=Filtriraj vrijednosti
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
@@ -76,3 +94,4 @@ storage.data.label=Podaci
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=Obrađena vrijednost
