--- a/hr/browser/chrome/browser/devtools/webconsole.properties
+++ b/hr/browser/chrome/browser/devtools/webconsole.properties
@@ -249,6 +249,11 @@ messageToggleDetails=Prikaži/sakrij detalje poruke.
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
+emptySlotLabel=#1 prazno mjesto;#1 prazna mjesta;#1 praznih mjesta
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(indeks)
+table.iterationIndex=(iteracijski indeks)
+table.key=Ključ
+table.value=Vrijednosti
