--- a/hr/browser/chrome/browser/devtools/webide.properties
+++ b/hr/browser/chrome/browser/devtools/webide.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title_noApp=Firefox WebIDE
 
 
 mainProcess_label=Glavni proces
@@ -13,18 +14,33 @@ mainProcess_label=Glavni proces
 
 
 # Variable: name of the operation (in english)
+error_operationFail=Operacija nije uspjela: %1$S
 
 # Variable: app name
+error_cantConnectToApp=Povezivanje na aplikaciju nije moguće: %1$S
 
 # Variable: error message (in english)
+error_cantFetchAddonsJSON=Preuzimanje popisa dodataka nije moguće: %S
 
+addons_stable=stabilno
+addons_unstable=nestabilno
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
 # "stable" or "unstable".
+addons_simulator_label=Firefox OS %1$S simulator (%2$S)
 addons_install_button=instaliraj
 addons_uninstall_button=ukloni
+addons_adb_label=Dodatak ADB pomoćnika
+addons_adb_warning=Bez ovog dodatka, USB uređaji neće biti prepoznati
+addons_status_unknown=?
 addons_status_installed=Instalirano
+addons_status_uninstalled=Nije instaliran
+addons_status_preparing=priprema
+addons_status_downloading=preuzimanje
+addons_status_installing=instalacija
 
+runtimedetails_checkno=ne
+runtimedetails_checkyes=da
 
 # Validation status
