--- a/hr/browser/chrome/browser/lightweightThemes.properties
+++ b/hr/browser/chrome/browser/lightweightThemes.properties
@@ -5,4 +5,7 @@
 
 
 
+lightweightThemes.recommended-4.description=Pastel Gradient je (C) darrinhenein. Dostupan pod CC-BY. Bez jamstva.
 
+lightweightThemes.recommended-5.name=Carbon Light
+lightweightThemes.recommended-5.description=Carbon Light je (C) Jaxivo. Dostupan pod CC-BY-SA. Bez jamstva.
