--- a/hr/browser/chrome/browser/devtools/projecteditor.properties
+++ b/hr/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,6 +19,7 @@ projecteditor.confirmUnsavedTitle=Nespremljene promjene
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
 # This string is displayed as the message of the confirm prompt that checks
 # to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=Imate nespremljene promjene koje će biti izgubljene ako izađete. Jeste li sigurni da želite nastaviti?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
