--- a/hr/browser/chrome/browser/loop/loop.properties
+++ b/hr/browser/chrome/browser/loop/loop.properties
@@ -9,6 +9,7 @@ share_link_header_text=Podijelite ovu poveznicu da biste pozvali nekoga na razgo
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
+invitee_name_label=Koga pozivate?
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -16,6 +17,7 @@ share_link_header_text=Podijelite ovu poveznicu da biste pozvali nekoga na razgo
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Pozivnica će isteći za {{expiry_time}} dan;Pozivnica će isteći za {{expiry_time}} dana;Pozivnica će isteći za {{expiry_time}} dana
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -23,8 +25,10 @@ share_link_header_text=Podijelite ovu poveznicu da biste pozvali nekoga na razgo
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Pozivnica će isteći za {{expiry_time}} sat;Pozivnica će isteći za {{expiry_time}} sata;Pozivnica će isteći za {{expiry_time}} sati
 
 # Status text
+display_name_guest=Gost
 display_name_dnd_status=Ne uznemiravaj
 display_name_available_status=Dostupan
 
@@ -33,6 +37,14 @@ display_name_available_status=Dostupan
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Žao nam je, ali nismo mogli dobiti URL poziva.
+session_expired_error_description=Sesija istekla. Svi URL-ovi koje ste ranije stvorili i podijelili više neće funkcionirati.
+could_not_authenticate=Autentikacija nije uspjela
+password_changed_question=Jeste li promijenili vašu lozinku?
+try_again_later=Molim pokušajte ponovno kasnije
+could_not_connect=Povezivanje na poslužitelj nije uspjelo
+check_internet_connection=Molim provjerite vašu Internet vezu
+login_expired=Vaša prijava je istekla
+service_not_available=Usluga je trenutno nedostupna
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
@@ -66,45 +78,60 @@ contacts_search_placesholder=Traži…
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
+valid_email_text_description=Molim ušišite adresu e-pošte.
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Dodaj ili uvezi kontakt
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
+import_contacts_button=Uvoz
 importing_contacts_progress_button=Uvozim...
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sinkroniziraj kontakte
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Uvoz kontakta nije uspio
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Žao mi je, ali uvoz kontakta nije uspio. Za pomoć provjerite {{import_failed_support_link_label}}\u0020
+import_failed_support_link_label=stranicu pomoći
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Ukloni kontakt
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
+confirm_delete_contact_alert=Jeste li sigurni da želite obrisati ovaj kontakt?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Ukloni kontakt
+confirm_delete_contact_cancel_button=Odustani
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Blokiraj kontakt
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Odblokiraj kontakt
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Uredi kontakt...
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Uredi kontakt
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -138,6 +165,8 @@ unmute_local_video_button_title=Uključite vaš video zvuk\u0020
 # Outgoing conversation
 
 initiate_audio_video_call_button2=Pokreni
+initiate_audio_call_button2=Razgovor
+initiate_call_cancel_button=Odustani
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
@@ -146,20 +175,31 @@ call_progress_connecting_description=Povezivanje…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Zvoni...
 
+peer_ended_conversation2=Osoba koju ste zvali je prekinula razgovor.
+conversation_has_ended=Vaš razgovor je završio.
+restart_call=Pridruži se ponovno
 
+generic_failure_title=Nešto je pošlo po krivu.
+generic_failure_with_reason2=Možete pokušati ponovno ili poslati poveznicu e-poštom da bi vas mogli kontaktirati kasnije.
+generic_failure_no_reason2=Želite li pokušati ponovno?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
+contact_offline_title=Osoba nije online
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
+call_timeout_notification_text=Vaš poziv nije uspio.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Pokušaj ponovno
 email_link_button=Pošalji pov&eznicu e-poštom
+cancel_button=Odustani
 
 cannot_start_call_session_not_ready=Nije moguće započeti poziv, jer sesija nije spremna.
 network_disconnected=Mrežna veza je nasilno prekinuta.
@@ -169,7 +209,8 @@ connection_error_see_console_notification=Poziv nije uspio; Provjerite konzolu z
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-  and {{privacy_notice}}.
+legal_text_and_links3=Korištenjem {{clientShortname}} slažete se sa  {{terms_of_use}} i {{privacy_notice}}.
+legal_text_tos = Uvjetima korištenja
 legal_text_privacy = Pravila o privatnosti
 
 feedback_back_button=Natrag
