--- a/hr/browser/chrome/browser/newTab.properties
+++ b/hr/browser/chrome/browser/newTab.properties
@@ -8,12 +8,15 @@ newtab.block=Ukloni ovu stranicu
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONZORIRANO
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain=Ova pločica je prikazana u ime Mozillinog partnera. Možete je ukloniti u bilo kojem trenutku klikom na tipku %1$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Mozillin partner je vizualno unaprijedio ovu pločicu zamjenom slike zaslona. Unaprijeđene pločice možete isključiti klikom na tipku %1$S u vašim postavkama. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
