--- a/ml/browser/chrome/browser/devtools/profiler.properties
+++ b/ml/browser/chrome/browser/devtools/profiler.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# LOCALIZATION NOTE These strings are used inside the Debugger
-# which is available from the Web Developer sub-menu -> 'Debugger'.
+# LOCALIZATION NOTE These strings are used inside the Profiler
+# which is available from the Web Developer sub-menu -> 'Profiler'.
 # The correct localization of this file might be to keep it in
 # English, or another language commonly spoken among web developers.
 # You want to make that choice consistent across the developer tools.
@@ -13,105 +13,76 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
-profiler.label=പ്രൊഫൈലര്‍
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
-profiler.panelLabel=പ്രൊഫൈലര്‍ പാനല്‍
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
-profiler2.commandkey=VK_F5
-profiler.accesskey=ല
+profiler.commandkey2=VK_F5
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
 profiler.tooltip2=ജാവാസ്ക്രിപ്റ്റ് പ്രൊഫൈലര്‍
 
-# LOCALIZATION NOTE (profiler.profileName):
-# This string is the default name for new profiles. Its parameter is a number.
-# For example: "Profile 1", "Profile 2", etc.
-profiler.profileName=പ്രൊഫൈല്‍ %S
+# LOCALIZATION NOTE (noRecordingsText): The text to display in the
+# recordings menu when there are no recorded profiles yet.
+noRecordingsText=പ്രൊഫൈലുകളില്ല.
 
-# LOCALIZATION NOTE (profiler.completeProfile):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays everything that the profiler has generated so far.
-profiler.completeProfile=പ്രൊഫൈല്‍ പൂര്‍ത്തിയാക്കുക
+# LOCALIZATION NOTE (recordingsList.itemLabel):
+# This string is displayed in the recordings list of the Profiler,
+# identifying a set of function calls.
 
-# LOCALIZATION NOTE (profiler.sampleRange):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays a sample range of data selected by user themselves.
-profiler.sampleRange=മാതൃക പരിധി
+# LOCALIZATION NOTE (recordingsList.recordingLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has not finished recording.
 
-# LOCALIZATION NOTE (profiler.runningTime):
-# This string is displayed as a table header in the profiler UI.
-profiler.runningTime=പ്രവര്‍ത്തന സമയം
+# LOCALIZATION NOTE (recordingsList.durationLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has finished recording.
+recordingsList.durationLabel=%Sms
 
-# LOCALIZATION NOTE (profiler.self):
-# This string is displayed as a table header in the profiler UI.
-# "Self" is how much time was spent doing work directly in that function.
-# As opposed to the total time which is how much time was spent in that
-# function and in functions it called.
-profiler.self=സ്വയം
+# LOCALIZATION NOTE (recordingsList.saveLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for saving an item to disk.
+recordingsList.saveLabel=സൂക്ഷിക്കുക
 
-# LOCALIZATION NOTE (profiler.symbolName)
-# This string is displayed as a table header in the profiler UI.
-profiler.symbolName=ചിഹ്നത്തിന്റെ പേരു്
+# LOCALIZATION NOTE (profile.tab):
+# This string is displayed in the profile view for a tab, after the
+# recording has finished, as the recording 'start → stop' range in milliseconds.
 
-# LOCALIZATION NOTE (profiler.start)
-# This string is displayed on the button that starts the profiler.
-profiler.start=ആരംഭിയ്ക്കുക
+# LOCALIZATION NOTE (graphs.fps):
+# This string is displayed in the framerate graph of the Profiler,
+# as the unit used to measure frames per second. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
 
-# LOCALIZATION NOTE (profiler.stop)
-# This string is displayed on the button that stops the profiler.
-profiler.stop=നിര്‍ത്തുക
+# LOCALIZATION NOTE (category.*):
+# These strings are displayed in the categories graph of the Profiler,
+# as the legend for each block in every bar. These labels should be kept
+# AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.network=നെറ്റ്‌വര്‍ക്ക്‌
+category.graphics=ഗ്രാഫിക്ക്സ്
+category.storage=സംഭരണം
 
-# LOCALIZATION NOTE (profiler.loading)
-# This string is displayed above the progress bar when the profiler
-# is busy loading and parsing the report.
-profiler.loading=പ്രൊഫൈല്‍ ലഭ്യമാക്കുന്നു...
+# LOCALIZATION NOTE (table.root):
+# This string is displayed in the call tree for the root node.
 
-# LOCALIZATION NOTE (profiler.stateIdle)
-# This string is used to show that the profile in question is in IDLE
-# state meaning that it hasn't been started yet.
-profiler.stateIdle=നിര്‍ജ്ജീവം
+# LOCALIZATION NOTE (table.url.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the url
+# labels which, when clicked, jump to the debugger.
 
-# LOCALIZATION NOTE (profiler.stateRunning)
-# This string is used to show that the profile in question is in RUNNING
-# state meaning that it has been started and currently gathering profile data.
-profiler.stateRunning=പ്രവര്‍ത്തനത്തില്‍
+# LOCALIZATION NOTE (table.zoom.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the 'zoom'
+# buttons (small magnifying glass icons) which spawn a new tab.
 
-# LOCALIZATION NOTE (profiler.stateCompleted)
-# This string is used to show that the profile in question is in COMPLETED
-# state meaning that it has been started and stopped already.
-profiler.stateCompleted=പൂര്‍ത്തിയായിരിയ്ക്കുന്നു
+# LOCALIZATION NOTE (recordingsList.saveDialogTitle):
+# This string is displayed as a title for saving a recording to disk.
 
-# LOCALIZATION NOTE (profiler.sidebarNotice)
-# This string is displayed in the profiler sidebar when there are no
-# existing profiles to show (usually happens when the user opens the
-# profiler for the first time).
-profiler.sidebarNotice=പ്രൊഫൈലുകളില്ല.
+# LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogJSONFilter=JSON ഫയലുകള്‍
 
-# LOCALIZATION NOTE (profiler.startProfilerString)
-# This string is displayed on the profiler button when no active
-# profiling sessions are running
-profiler.startProfilerString=പ്രൊഫൈലിങ് ആരംഭിയ്ക്കുക
-
-# LOCALIZATION NOTE (profiler.stopProfilerString)
-# This string is displayed on the profiler button when an active
-# profiling session is running
-profiler.stopProfilerString=പ്രൊഫൈലിങ് നിര്‍ത്തുക
-
-# LOCALIZATION NOTE (profiler.save)
-# This string is displayed as a label for a button that opens a Save File
-# dialog where user can save generated profiler to a file.
-profiler.save=സൂക്ഷിക്കുക
-
-# LOCALIZATION NOTE (profiler.saveFileAs)
-# This string as a title for a Save File dialog.
-profiler.saveFileAs=പ്രൊഫൈല്‍ ഇങ്ങനെ സൂക്ഷിയ്ക്കുക
-
-# LOCALIZATION NOTE (profiler.openFile)
-# This string as a title for a Open File dialog.
-profiler.openFile=പ്രൊഫൈല്‍ ഇംപോര്‍ട്ട് ചെയ്യുക
+# LOCALIZATION NOTE (recordingsList.saveDialogAllFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogAllFilter=എല്ലാ ഫയലുകളും
