--- a/ml/browser/chrome/browser/devtools/toolbox.properties
+++ b/ml/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=ഡവലപ്പര്‍ ഉപകരണങ്ങള്‍
 # for the options panel tab.
 optionsButton.tooltip=ഉപകരണപ്പെട്ടിയ്ക്കുള്ള ഐച്ഛികങ്ങള്‍
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=ഐച്ഛികങ്ങള്‍
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=ടൂള്‍ബോക്സ് ഐച്ഛികങ്ങള്‍ക്കുള്ള പാനല്‍
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=താളില്‍ നിന്നും ഒരു എലമെന്റ് എടുക്കുക
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=ഇരുണ്ട പ്രമേയം
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=ഇളം പ്രമേയം
