--- a/ml/browser/chrome/browser/newTab.properties
+++ b/ml/browser/chrome/browser/newTab.properties
@@ -5,6 +5,20 @@
 newtab.pin=നിലവിലുള്ള സ്ഥാനത്തു് ഈ സൈറ്റ് പിന്‍ ചെയ്യുക
 newtab.unpin=ഈ സൈറ്റ് അണ്‍പിന്‍ ചെയ്യുക
 newtab.block=ഈ സൈറ്റ് നീക്കം ചെയ്യുക
-newtab.show=പുതിയ റ്റാബിലുള്ള താള്‍ കാണിയ്ക്കുക
-newtab.hide=പുതിയ റ്റാബിലുള്ള താള്‍ അദൃശ്യമാക്കുക
-newtab.sponsored=സ്പോണ്‍സര്‍ ചെയ്ത ടൈലുകളില്‍ വിവരങ്ങള്‍ കാണിയ്ക്കുക
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.learn.link=കൂടുതല്‍ അറിയുക...
+newtab.privacy.link=സ്വകാര്യ പോളിസി
