--- a/ml/browser/chrome/browser/shellservice.properties
+++ b/ml/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S  ഉപാധികള്‍ (&O)
 safeModeLabel=%S  സെയിഫ് മോഡ് (&S)
-setDefaultBrowserTitle=സ്വതവേയുള്ള ബ്രൌസര്‍
-setDefaultBrowserMessage=%S നിലവില്‍ സ്വതവേയുള്ള ബ്രൌസറല്ല. അങ്ങനെ വേണമോ?
-setDefaultBrowserDontAsk=%S തുടങ്ങുമ്പോള്‍ എപ്പോഴും ഈ പരിശോധന നടത്തുക\u0020
-alreadyDefaultBrowser=%S നിങ്ങളുടെ സ്വതവേയുള്ള ബ്രൌസറായി ക്രമീകരിച്ചിരിക്കുന്നു.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = ഐച്ഛികങ്ങള്‍
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = ഇനി ചോദിക്കരുതു് (D)
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin=ഡെസ്ക്ടോപ്പ് Background.bmp
 DesktopBackgroundDownloading=ചിത്രം സൂക്ഷിച്ചുകൊണ്ടിരിക്കുന്നു...
 DesktopBackgroundSet=ഡെസ്ക്ടോപ്പ് പശ്ചാത്തലം സജ്ജമാക്കുക
