--- a/ml/webapprt/webapprt/webapp.properties
+++ b/ml/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=%S ഇന്‍സ്റ്റോള്‍ ചെയ്യ
 webapps.install.description=നിങ്ങള്‍ക്കു് %S ഇന്‍സ്റ്റോള്‍ ചെയ്യണമോ?
 webapps.install.install=പ്രയോഗം ഇന്‍സ്റ്റോള്‍ ചെയ്യുക
 webapps.install.dontinstall=ഇന്‍സ്റ്റോള്‍ ചെയ്യേണ്ട
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=പ്രതിഫലം
 paymentDialog.message=നിങ്ങള്‍ക്കു് ഏതു് പേയ്മെന്റ് പ്രൊവൈഡര്‍ ഉപയോഗിയ്ക്കണം?
