[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ta/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,3 +97,6 @@ quit-button.tooltiptext.linux2 = வெளியேறு %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = வெளியேறு %1$S (%2$S)
 
+
+loop-call-button.label = பேச இன்னொருவரை அழை
+loop-call-button.tooltiptext = பேச இன்னொருவரை அழை
