--- a/ta/browser/chrome/browser/devtools/webconsole.properties
+++ b/ta/browser/chrome/browser/devtools/webconsole.properties
@@ -252,3 +252,5 @@ messageToggleDetails=செய்தி விவரங்களை காண்
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.key=விசை
+table.value=மதிப்புகள்
