--- a/ta/browser/chrome/browser/devtools/webide.properties
+++ b/ta/browser/chrome/browser/devtools/webide.properties
@@ -8,6 +8,7 @@ mainProcess_label=பிரதான செயலாக்கம்
 
 
 
+notification_showTroubleShooting_label=சிக்கல் தீர்த்தல்
 
 # These messages appear in a notification box when an error occur.
 
@@ -18,6 +19,8 @@ mainProcess_label=பிரதான செயலாக்கம்
 
 # Variable: error message (in english)
 
+addons_stable=நிலையானது
+addons_unstable=நிலையற்றது
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -25,6 +28,9 @@ mainProcess_label=பிரதான செயலாக்கம்
 addons_install_button=நிறுவு
 addons_uninstall_button=நிறுவல் நீக்கு
 addons_status_installed=நிறுவப்பட்டது
+addons_status_downloading=பதிவிறக்குகிறது
+addons_status_installing=நிறுவுகிறது
 
+runtimedetails_checkunkown=அறியாத
 
 # Validation status
