--- a/ta/browser/chrome/browser/shellservice.properties
+++ b/ta/browser/chrome/browser/shellservice.properties
@@ -9,6 +9,8 @@ safeModeLabel=%S பாதுகாப்பு முறைமை (&S)
 # %S will be replaced by brandShortName
 setDefaultBrowserOptions.label     = விருப்பங்கள்
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = மீண்டும் கேட்காதே
+setDefaultBrowserNever.accesskey   = D
 
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
