--- a/ta/browser/chrome/browser/devtools/storage.properties
+++ b/ta/browser/chrome/browser/devtools/storage.properties
@@ -11,16 +11,20 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=a
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=கிடங்கு
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=கிடங்கு ஆய்வாளர்
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
@@ -42,6 +46,7 @@
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=குக்கீகள்
+tree.labels.indexedDB=அகரவரிசை தரவுத்தளம்
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -49,6 +54,8 @@ tree.labels.cookies=குக்கீகள்
 table.headers.cookies.name=பெயர்
 table.headers.cookies.path=பாதை
 table.headers.cookies.host=களம்
+table.headers.cookies.expires=காலாவதியாகும் நாள்
+table.headers.cookies.value=மதிப்பு
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -58,10 +65,18 @@ table.headers.cookies.host=களம்
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
+table.headers.cookies.isDomain=isDomain
 
+table.headers.localStorage.name=விசை
+table.headers.localStorage.value=மதிப்பு
 
+table.headers.sessionStorage.name=விசை
+table.headers.sessionStorage.value=மதிப்பு
 
+table.headers.indexedDB.name=விசை
+table.headers.indexedDB.value=மதிப்பு
 table.headers.indexedDB.version=பதிப்பு
+table.headers.indexedDB.keyPath=விசை
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
@@ -69,6 +84,7 @@ table.headers.indexedDB.version=பதிப்பு
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=மதிப்புகளை வடிகட்டு
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
