--- a/ta/browser/chrome/browser/webrtcIndicator.properties
+++ b/ta/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - பகிர்தல் காட்டி
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = உங்கள் கேமராவும் மைக்ரோஃபோனும் பகிரப்படுகின்றன. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
 webrtcIndicator.sharingCamera.tooltip              = உங்கள் கேமரா பகிரப்படுகிறது. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
 webrtcIndicator.sharingMicrophone.tooltip          = உங்கள் மைக்ரோஃபோன் பகிரப்படுகிறது. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
+webrtcIndicator.sharingApplication.tooltip = ஒரு சாளரம் பகிரப்படுகிறது. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
 webrtcIndicator.sharingScreen.tooltip = உங்கள் திரை பகிரப்படுகிறது. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
 webrtcIndicator.sharingWindow.tooltip = ஒரு சாளரம் பகிரப்படுகிறது. பகிர்தலைக் கட்டுப்படுத்த இங்கு சொடுக்கவும்.
 
