--- a/ta/webapprt/webapprt/webapp.properties
+++ b/ta/webapprt/webapprt/webapp.properties
@@ -42,8 +42,12 @@ webapps.install.install=பயன்பாட்டை நிறுவு
 webapps.install.dontinstall=நிறுவ வேண்டாம்
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
+webapps.uninstall.title=%S ஐ நீக்கு
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=%S ஐ நீக்க வேண்டுமா?
+webapps.uninstall.uninstall=பயன்பாட்டை நீக்கு
+webapps.uninstall.dontuninstall=நீக்க வேண்டாம்
 
 paymentDialog.title=கட்டணம்
 paymentDialog.message=எந்த கட்டணம் செலுத்துபவரை நீங்கள் பயன்படுத்த விரும்புகிறீர்கள்?
