updated latvian translation

--- a/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lv/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -32,6 +32,10 @@ developer-button.label = Izstrādātāju rīki
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
 developer-button.tooltiptext2 = Atvērt izstrādātāju rīkus (%S)
 
+loop-call-button.label = Uzaicināt kādu uz sarunu
+loop-call-button.tooltiptext = Uzaicināt kādu uz sarunu
+
+
 add-ons-button.label = Papildinājumi
 # LOCALIZATION NOTE(add-ons-button.tooltiptext2): %S is the keyboard shortcut
 add-ons-button.tooltiptext3 = Pārvaldīt papildinājumus (%S)
