[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -100,6 +100,8 @@ popupShowPopupPrefix=Visa ”%S”
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
+badContentBlocked.blocked.message=%S blockerar innehåll på denna sida.
+badContentBlocked.notblocked.message=%S blockerar inte något innehåll på denna sida.
 
 # missing plugin installer
 installPlugin.message = Vill du installera insticksmodulen som krävs för att visa all media på den här sidan?
@@ -449,7 +451,10 @@ webapps.install.success = Programmet är installerat
 webapps.install.inprogress = Installation pågår
 webapps.uninstall = Avinstallera
 webapps.uninstall.accesskey = U
+webapps.doNotUninstall = Avinstallera inte
+webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Vill du avinstallera "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S visas nu i helskärm.
@@ -510,7 +515,16 @@ getUserMedia.shareMicrophone.message = Vill du dela mikrofon med %S?
 getUserMedia.shareScreen.message = Vill du dela din skärm med %S?
 getUserMedia.shareCameraAndMicrophone.message = Vill du dela kamera och mikrofon med %S?
 getUserMedia.shareScreenAndMicrophone.message = Vill du dela mikrofon och skärm med %S?
+getUserMedia.selectWindow.label=Fönster att dela:
+getUserMedia.selectWindow.accesskey=F
+getUserMedia.selectScreen.label=Skärm att dela:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Program att dela:
+getUserMedia.selectApplication.accesskey=P
 getUserMedia.noVideo.label = Ingen video
+getUserMedia.noApplication.label = Inget Program
+getUserMedia.noScreen.label = Ingen skärm
+getUserMedia.noWindow.label = Inget fönster
 getUserMedia.noAudio.label = Inget ljud
 getUserMedia.shareEntireScreen.label = Hela skärmen
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -518,6 +532,7 @@ getUserMedia.shareEntireScreen.label = Hela skärmen
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 fönster);#1 (#2 fönster)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -525,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Hela skärmen
 getUserMedia.shareSelectedDevices.label = Dela vald enhet; Dela valda enheter.
 getUserMedia.shareSelectedDevices.accesskey = D
 getUserMedia.shareScreen.label = Dela skärm
+getUserMedia.shareApplication.label = Dela valt program
 getUserMedia.shareWindow.label = Dela valt fönster\u0020
 getUserMedia.shareSelectedItems.label = Dela valda objekt
 getUserMedia.always.label = Dela alltid
@@ -536,6 +552,7 @@ getUserMedia.never.accesskey = D
 getUserMedia.sharingCamera.message2 = Du delar nu din kamera med sidan.
 getUserMedia.sharingMicrophone.message2 = Du delar nu din mikrofon med sidan.
 getUserMedia.sharingCameraAndMicrophone.message2 = Du delar nu din kamera och mikrofon med sidan.
+getUserMedia.sharingApplication.message = Du delar nu ett program med denna sidan.
 getUserMedia.sharingScreen.message = Du delar nu din skärm med denna sidan.
 getUserMedia.sharingWindow.message = Du delar nu ett fönster med denna sidan.
 getUserMedia.continueSharing.label = Fortsätt dela
@@ -543,6 +560,8 @@ getUserMedia.continueSharing.accesskey = F
 getUserMedia.stopSharing.label = Sluta dela
 getUserMedia.stopSharing.accesskey = S
 
+getUserMedia.sharingMenu.label = Flikar som delar enheter
+getUserMedia.sharingMenu.accesskey = e
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
@@ -555,6 +574,9 @@ getUserMedia.stopSharing.accesskey = S
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuApplication = %S (program)
+getUserMedia.sharingMenuScreen = %S (skärm)
 getUserMedia.sharingMenuWindow = %S (fönster)
 getUserMedia.sharingMenuCameraMicrophone = %S (kamera och mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon och program)
@@ -565,6 +587,7 @@ getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon och skärm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon och fönster)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Okänt ursprung
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S startar … väldigt … långsamt.
