--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,3 +97,8 @@ quit-button.tooltiptext.linux2 = Avsluta %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Avsluta %1$S (%2$S)
 
+panic-button.label = Glöm
+panic-button.tooltiptext = Glöm viss webbläsarhistorik
+
+loop-call-button.label = Bjud in någon att prata
+loop-call-button.tooltiptext = Bjud in någon att prata
