--- a/sv-SE/browser/chrome/browser/devtools/profiler.properties
+++ b/sv-SE/browser/chrome/browser/devtools/profiler.properties
@@ -13,13 +13,16 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+profiler.label2=Prestanda
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
+profiler.panelLabel2=Prestanda panel
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
@@ -33,10 +36,12 @@ noRecordingsText=Det finns inga profiler än.
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=Spelar in #%S
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
+recordingsList.recordingLabel=Pågår...
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -51,6 +56,7 @@ recordingsList.saveLabel=Spara
 # LOCALIZATION NOTE (profile.tab):
 # This string is displayed in the profile view for a tab, after the
 # recording has finished, as the recording 'start → stop' range in milliseconds.
+profile.tab=%1$S ms → %2$S ms
 
 # LOCALIZATION NOTE (graphs.fps):
 # This string is displayed in the framerate graph of the Profiler,
@@ -69,20 +75,25 @@ category.gc=GC
 category.network=Nätverk
 category.graphics=Grafik
 category.storage=Lagring
+category.events=Inmatning & händelser
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
+table.root=(rot)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=Visa källkoden i avlusaren
 
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
 # buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=Inspektera ram i en ny flik\u0020
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Spara profil...
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
