--- a/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,6 +19,7 @@ projecteditor.confirmUnsavedTitle=Osparade ändringar
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
 # This string is displayed as the message of the confirm prompt that checks
 # to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=Du har osparade ändringar som kommer att gå förlorade om du avslutar. Är du säker på att du vill fortsätta?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
