--- a/sv-SE/browser/chrome/browser/devtools/storage.properties
+++ b/sv-SE/browser/chrome/browser/devtools/storage.properties
@@ -15,9 +15,11 @@ storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=a
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=Lagring
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
@@ -27,24 +29,30 @@ storage.menuLabel=Lagring
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
+storage.panelLabel=Lagringspanel
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
+storage.tooltip2=Lagringsinspekterare (Kakor, Lokal Lagring...)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
 # there are no websites on the current page (about:blank)
+tree.emptyText=Ingen värd för denna sida
 
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=Ingen data tillgänglig för den valda värden
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookies
 tree.labels.localStorage=Lokal Lagring
+tree.labels.sessionStorage=Sessionslagring
+tree.labels.indexedDB=Indexerad DB
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -52,6 +60,10 @@ tree.labels.localStorage=Lokal Lagring
 table.headers.cookies.name=Namn
 table.headers.cookies.path=Sökväg
 table.headers.cookies.host=Domän
+table.headers.cookies.expires=Utgår den
+table.headers.cookies.value=Värde
+table.headers.cookies.lastAccessed=Senaste åtkomst
+table.headers.cookies.creationTime=Skapad den
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -73,8 +85,13 @@ table.headers.sessionStorage.value=Värde
 
 table.headers.indexedDB.name=Nyckel
 table.headers.indexedDB.db=Databasnamn
+table.headers.indexedDB.objectStore=Objektlagernamn
+table.headers.indexedDB.value=Värde
+table.headers.indexedDB.origin=Ursprung
 table.headers.indexedDB.version=Version
+table.headers.indexedDB.objectStores=Objektlager
 table.headers.indexedDB.keyPath=Nyckel
+table.headers.indexedDB.autoIncrement=Öka automatiskt
 table.headers.indexedDB.indexes=Förteckningar
 
 # LOCALIZATION NOTE (label.expires.session):
@@ -92,3 +109,4 @@ storage.data.label=Data
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=Tolkat värde
