--- a/sv-SE/browser/chrome/browser/devtools/webconsole.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webconsole.properties
@@ -249,6 +249,11 @@ messageToggleDetails=Visa/göm meddelande detaljer.\u0020
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
+emptySlotLabel=#1 tom plats;#1 tomma platser
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(index)
+table.iterationIndex=(upprepning nummer)
+table.key=Nyckel
+table.value=Värden
