--- a/sv-SE/browser/chrome/browser/shellservice.properties
+++ b/sv-SE/browser/chrome/browser/shellservice.properties
@@ -7,6 +7,9 @@ safeModeLabel=%S &felsäkert läge
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Få det mesta ut av %S genom att ange den som din förvalda webbläsare
+setDefaultBrowserConfirm.label     = Använd %S som min förvalda webbläsare
+setDefaultBrowserConfirm.accesskey = A
 setDefaultBrowserOptions.label     = Inställningar
 setDefaultBrowserOptions.accesskey = I
 setDefaultBrowserNotNow.label      = Inte nu
