--- a/sv-SE/browser/chrome/browser/webrtcIndicator.properties
+++ b/sv-SE/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Delningsindikator
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Din kamera och mikrofon delas. Klicka för att kontrollera delning.\u0020
 webrtcIndicator.sharingCamera.tooltip              = Din kamera delas. Klicka för att kontrollera delning\u0020
 webrtcIndicator.sharingMicrophone.tooltip          = Din mikrofon delas. Klicka för att kontrollera delning.
+webrtcIndicator.sharingApplication.tooltip = Ett program delas. Klicka för att kontrollera delning.
 webrtcIndicator.sharingScreen.tooltip = Din skärm delas. Klicka för att kontrollera delning.
 webrtcIndicator.sharingWindow.tooltip = Ett fönster delas. Klicka för att kontrollera delning.
 
@@ -23,6 +24,7 @@ webrtcIndicator.sharingWindow.tooltip = Ett fönster delas. Klicka för att kont
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Delar kamera med "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Delar Mikrofon med "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Delar ett Program med "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Delar skärm med "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Delar ett fönster med "%S"
 webrtcIndicator.controlSharing.menuitem = Kontrollera delning
@@ -37,6 +39,7 @@ webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Delar mikrofon med #1 flik
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Dela ett program med #1 flik;Dela program med #1 flikar
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
