--- a/sv-SE/toolkit/chrome/global/aboutSupport.properties
+++ b/sv-SE/toolkit/chrome/global/aboutSupport.properties
@@ -69,8 +69,8 @@ adapterDrivers = Adapterdrivrutin
 adapterRAM = Adapter-RAM
 driverVersion = Drivrutinsversion
 driverDate = Drivrutinsdatum
-adapterDescription2 = Adapterbeskrivning (GPU #2) 
-adapterVendorID2 = Leverantörs-ID (GPU #2) 
+adapterDescription2 = Adapterbeskrivning (GPU #2)\u0020
+adapterVendorID2 = Leverantörs-ID (GPU #2)\u0020
 adapterDeviceID2 = Enhets-ID (GPU #2)
 adapterSubsysID2 = Kortleverantörs-ID (GPU #2)
 adapterDrivers2 = Adapterdrivrutin (GPU #2)
