[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -584,7 +584,7 @@ getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ikhamera, isandisi-sandi ne
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ikhamera, isandisi-sandi nefestile)
 getUserMedia.sharingMenuMicrophoneApplication = %S (isandisi-sandi nosetyenziso)
 getUserMedia.sharingMenuMicrophoneScreen = %S (isandisi-sandi nesikrini)
-getUserMedia.sharingMenuMicrophoneWindow = (isandisi-sandi nefestile)
+getUserMedia.sharingMenuMicrophoneWindow = %S (isandisi-sandi nefestile)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Izifakelo ezingaziwayo
