--- a/xh/browser/chrome/browser/newTab.properties
+++ b/xh/browser/chrome/browser/newTab.properties
@@ -12,7 +12,7 @@ newtab.sponsored.button=Ixhaswa ngezimali
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
-newtab.sponsored.explain=Esi sihloko siboniswayo  kuwe egameni lomlingane kaMozilla. Ungasisusa naninina ngokucofa iqhosha %S$S. %2$S
+newtab.sponsored.explain=Esi sihloko siboniswayo  kuwe egameni lomlingane kaMozilla. Ungasisusa naninina ngokucofa iqhosha %1$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
